#12 Add Mail Token Support

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -2,3 +2,4 @@ errorCode.1000=Wystąpił błąd!
 errorCode.2000=Nie znaleziono takiego konta!
 errorCode.2001=Ten email jest zajęty!
 errorCode.2002=Wpisano nieprawidłowe hasło!
+errorCode.2003=Niepoprawny token!
