#12 Add Account Confirmation Token

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ errorCode.2000=Nie znaleziono takiego konta!
 errorCode.2001=Ten email jest zajęty!
 errorCode.2002=Wpisano nieprawidłowe hasło!
 errorCode.2003=Niepoprawny token!
+errorCode.2004=Twoje konto jest już aktywne!
+errorCode.2005=Osiągnięto limit! Odczekaj kilka minut i spróbuj ponownie!
