--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ errorCode.2002=Wpisano nieprawidłowe hasło!
 errorCode.2003=Niepoprawny token!
 errorCode.2004=Twoje konto jest już aktywne!
 errorCode.2005=Osiągnięto limit! Odczekaj kilka minut i spróbuj ponownie!
+errorCode.2006=Coś poszło nie tak z wysyłką wiadomości na email! Spróbuj ponownie!
