--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -6,3 +6,4 @@ errorCode.2003=Niepoprawny token!
 errorCode.2004=Twoje konto jest już aktywne!
 errorCode.2005=Osiągnięto limit! Odczekaj kilka minut i spróbuj ponownie!
 errorCode.2006=Coś poszło nie tak z wysyłką wiadomości na email! Spróbuj ponownie!
+errorCode.2007=Nie możesz tego zrobić!
